examples/errors/expr_as_mut_arg.jj
func f
with mut x


func main
{
    f(1);
}